# f2py-tests

./: .gitignore  LICENSE  README.md  build.py  meson.build  pyproject.toml
.github/workflows/: tests.yml
callbacks_and_arrays/: compile.bat  compile.sh  data_provider.py  data_reader.f90  data_reader.pyf  main.py
f90wrap/: compile_and_run.sh  main.py  types.f90
fib_tuto/01_quick/: compile.sh  test_fib1.py
fib_tuto/02_smart/: compile.sh  fib2.pyf  test_fib2.py
fib_tuto/03_quick_and_smart/: compile.sh  test_fib3.py
fib_tuto/04_meson_build/: compile.sh  meson.build
src/fibonacci/: fib1.f
types/: compile.sh  data.f90  data_provider.py  data_reader.f90  demo.f90  main.py  shapes.f90  test.sh
types_and_arrays/: compile.bat  compile.sh  data_bridge.py  data_provider.py  data_reader.f90  demo.f90  demo.pyf  dummy_data.f90  main.f90  main.py  my_data.f90  process.f90  python_data_exchange.f90  python_data_reader.f90  python_data_writer.f90  types.f90
types_and_arrays/fortran/: data_bridge.f90  main.f90  python_data_reader.f90  python_data_writer.f90
