[tool.poetry]
name = "f2py-tests"
version = "0.1.0"
description = ""
authors = ["Christophe DAVID <49477099+christophe-david@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
meson = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
