[tool.poetry]
name = "f2py-tests"
version = "0.1.0"
description = ""
authors = ["Christophe DAVID <49477099+christophe-david@users.noreply.github.com>"]
license = "MIT"

packages = [
    { include = "fibonacci", from = "src" },
]
include = [
    { path = "meson.build", format = "sdist" },
    # C extensions must be included in the wheel distributions
    { path = "bin/*.so", format = "wheel" },
    { path = "bin/*.pyd", format = "wheel" },
    { path = "bin/*.so", format = "wheel" },
    { path = "bin/*.pyd", format = "wheel" },
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
meson = "^1.1.0"
ninja = "^1.11.1"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
